[package]
name = "kg-display-derive"
version = "0.1.1"
authors = ["Jakub Chłapiński <jakub.chlapinski@kodegenix.pl>"]
description = """
Macro implementation for #[derive(Display)].
"""
readme = "README.md"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/Kodegenix/kg-display"
workspace = ".."
edition = "2018"

[lib]
proc-macro = true

[dependencies]
kg-display = { version = "0.1.2", path = "../kg-display" }
kg-utils = "0.3.1"
proc-macro2 = { version = "1.0.2", features = ["nightly"] }
quote = "1.0.2"
syn = { version = "1.0.5", features = ["full"] }
synstructure = "0.12.0"
