[package]
name = "kg-display-derive"
version = "0.1.2"
authors = ["Jakub Chłapiński <jakub.chlapinski@kodegenix.pl>"]
description = """
Macro implementation for #[derive(Display)].
"""
readme = "README.md"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/kodegenix/kg-display"
workspace = ".."
edition = "2018"

[lib]
proc-macro = true

[dependencies]
kg-display = { version = "0.1.2", path = "../kg-display" }
kg-utils = "0.4.0"
proc-macro2 = { version = "1.0.27", features = ["nightly"] }
quote = "1.0.9"
syn = { version = "1.0.73", features = ["full"] }
synstructure = "0.12.4"
