[package]
name = "kg-display"
version = "0.1.2"
authors = ["Jakub Chłapiński <jakub.chlapinski@kodegenix.pl>"]
description = """
Parser for format strings, and other utilities for implementing std::fmt::Display.
"""
readme = "README.md"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/Kodegenix/kg-display"
workspace = ".."
edition = "2018"

[lib]

[dependencies]
nom = "5.0.1"
